--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -19,6 +19,9 @@
 		       	<li><%= link_to "Home", root_path %></li>
 						<li><%= link_to "About", about_path %></li>
 					</ul>
+					<ul class="nav pull-right">
+		       	<li><%= link_to "Login", '#' %></li>
+					</ul>
 				</div>
  
     </div>
