--- a/app/views/pins/show.html.erb
+++ b/app/views/pins/show.html.erb
@@ -1,10 +1,13 @@
 <div class="row">
 	<div class="span6 offset3">
-		<div class="well"
+		<div class="well">
+		<%= image_tag @pin.image %>
 		<p>
 		  <%= @pin.description %>
 		</p>
-		<%= link_to 'Edit', edit_pin_path(@pin) %> |
+		<% if current_user == @pin.user %>
+			<%= link_to 'Edit', edit_pin_path(@pin) %> |
+		<% end %>
 		<%= link_to 'Back', pins_path %>
 		</div>
 	</div>
