--- a/app/views/pins/_pin.html.erb
+++ b/app/views/pins/_pin.html.erb
@@ -2,6 +2,9 @@
   	 <td><%= image_tag pin.image %></td>
       <td><%= pin.description %></td>
       <td><%= link_to 'Show', pin %></td>
+      <% if current_user == pin.user %>
       <td><%= link_to 'Edit', edit_pin_path(pin) %></td>
       <td><%= link_to 'Destroy', pin, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      <% end %>
+      
     </tr>
