--- a/app/views/pages/_home.html.erb
+++ b/app/views/pages/_home.html.erb
@@ -1,6 +1,4 @@
-<% if user_signed_in? %>
-	<h1>You're Logged In!</h1>
-<% end %> 
+<% unless user_signed_in? %>
 <div class= "hero-unit">
 	<h1>Welcome to One Month Rails, Dude!</h1>
 		<p>
@@ -13,3 +11,4 @@
 			<%= link_to "Sign Up Now!", new_user_registration_path, class: "btn btn-primary btn-large" %>
 		</p>
 </div>
+<% end %>
